name:                servant-ghcjs-router
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/crossroads-ghcjs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Servant.GHCJS.Redirect
                     , Servant.GHCJS.Router
                     , Servant.GHCJS.Internal
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , servant
                     , transformers
                     , ghcjs-hasher
  default-language:    Haskell2010

executable servant-ghcjs-router-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , servant-ghcjs-router
                     , servant
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/crossroads-ghcjs