name:                servant-ghcjs-router
version:             0.1.1.0
synopsis:            A Haskell based router for single page GHCJS applications
description:         Please see README.md
homepage:            https://github.com/plow-technologies/servant-ghcjs-router#readme
license:             BSD3
license-file:        LICENSE
author:              Kevin Cotrone
maintainer:          kevincotrone@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Servant.GHCJS.Redirect
                     , Servant.GHCJS.Render
                     , Servant.GHCJS.Router
                     , Servant.GHCJS.Internal
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , servant
                     , ghcjs-hasher
  default-language:    Haskell2010

executable servant-ghcjs-router-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , servant-ghcjs-router
                     , servant
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plow-technologies/servant-ghcjs-router.git